--- a/ProjectMVVM/Screens/Base.lproj/Main.storyboard
+++ b/ProjectMVVM/Screens/Base.lproj/Main.storyboard
@@ -17,24 +17,29 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="a1k-Nc-WG8">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="84" width="414" height="778"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="sNn-kx-KC2">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="IlH-Ae-0lo">
                                         <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="sNn-kx-KC2" id="JwF-zN-38W">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="IlH-Ae-0lo" id="6al-eq-6EA">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TJ6-5h-F8U">
+                                <rect key="frame" x="0.0" y="40" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="a1k-Nc-WG8" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="0Df-Ri-LDJ"/>
+                            <constraint firstItem="a1k-Nc-WG8" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="0Df-Ri-LDJ"/>
                             <constraint firstAttribute="trailing" secondItem="a1k-Nc-WG8" secondAttribute="trailing" id="TSh-l7-qgQ"/>
                             <constraint firstItem="a1k-Nc-WG8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="UHD-AC-d2w"/>
                             <constraint firstItem="a1k-Nc-WG8" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="b39-yS-Dd3"/>
@@ -45,7 +50,8 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="tableView" destination="sNn-kx-KC2" id="sK0-ci-lcv"/>
+                        <outlet property="searchBar" destination="TJ6-5h-F8U" id="zG5-ee-Za5"/>
+                        <outlet property="tableView" destination="a1k-Nc-WG8" id="7Tu-Kt-NvL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
